changed name to www_word_war

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ScrabbleWebApi</title>
+    <title>WWWordWar</title>
     <%= csrf_meta_tags %>
 
     <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div class="logo sm-col-left">
-        <%= link_to "ScrabbleWeb", root_url %>
+        <%= link_to "WWWordWar", root_url %>
       </div>
     </nav>
 
