--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ body {
   font-size: 18px;
   color: #2F2F2F;
   margin: 0 auto;
+  padding: 20
 }
 
 nav {
@@ -39,4 +40,3 @@ nav {
   text-decoration: none;
   padding-top: 10px;
 }
-
