about to start faraday request and validation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div class="logo sm-col-left">
-        <%= link_to "WWWordWar", root_url %>
+        <%= link_to "WWW Word War", root_url %>
       </div>
     </nav>
 
