--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@ body {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 18px;
   color: #2F2F2F;
-  margin: 0 auto;
+  margin: 200;
   padding: 20
 }
 
