switched to forg_tag

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 <h2>Fill in a word to Play!</h2>
 
-form_for :article, @article, :url => { :action => "create" }, :html => {:class => "nifty_form"} do |f|
 
-<%= form_for @play, controller: plays, action: create do |f| %>
-  <%= f.label :word  %>
-  <%= f.text_field :word  %>
-  <%= f.submit "Validate Word", game_id: 1, user_id: 1  %>
-<% end   %>
+
+<%= form_tag("/plays", method: "post") do %>
+  <%= label_tag(:word) %>
+  <%= text_field_tag(:word) %>
+  <%= submit_tag("Validate Word") %>
+<% end %>
