--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
         <%= link_to "WWW Word War", root_url %>
       </div>
     </nav>
+    <div class="center">
+    <% flash.each do |key, value| %>
+       <div class="alert alert-<%= key %>"><%= value %></div>
+     <% end %>
+   </div>
 
     <%= yield %>
   </body>
